terraform_test/SECURITY_GROUPS_TEST/main.tf
# Creates ingress and egress rules for security group

resource "aws_security_group" "web_traffic_test" {
  name        = "Web Traffic TEST"
  description = "Testing web traffic"
  vpc_id      = aws_vpc.test_vpc.id

  ingress {
    description = "HTTPS_TEST"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP_TEST"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins_TEST"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH_TEST"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1" # Any protocol
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "Allow Web Traffic TEST"
  }
}


resource "aws_network_interface" "web_server_test" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.web_traffic_test.id]
}


resource "aws_eip" "test_eip" {
  vpc                       = true
  network_interface         = aws_network_interface.web_server_test.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.test_gw]
}
